// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Venue Marker Tooltip should not render any data 1`] = `
<DocumentFragment>
  .c3 .ant-pro-table {
  --acx-table-cell-horizontal-space: 8px;
}

.c3 .ant-pro-table .ant-pro-card .ant-pro-card-body {
  padding: 0px;
}

.c3 .ant-pro-table .ant-table .parent-row-data,
.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-row-hover,
.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-fix-right,
.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-fix-left,
.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-column-sort {
  background-color: var(--acx-neutrals-20) !important;
  overflow: visible !important;
}

.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-with-append .ant-table-row-expand-icon {
  display: none;
}

.c3 .ant-pro-table .ant-table .ant-table-cell-with-append .indent-level-2 {
  padding-left: 10px !important;
}

.c3 .ant-pro-table .ant-table-cell-fix-left {
  border-bottom: 1px solid var(--acx-neutrals-30) !important;
}

.c3 .ant-pro-table .ant-table-thead > tr:first-child > th {
  padding-top: 12px;
  font-size: var(--acx-subtitle-4-font-size);
  line-height: var(--acx-subtitle-4-line-height);
  font-weight: var(--acx-subtitle-4-font-weight);
}

.c3 .ant-pro-table .ant-table-thead > tr:not(:first-child) > th {
  padding-top: 6px;
  font-size: var(--acx-subtitle-5-font-size);
  line-height: var(--acx-subtitle-5-line-height);
  font-weight: var(--acx-subtitle-5-font-weight-semi-bold);
}

.c3 .ant-pro-table .ant-table-thead > tr:last-child > th,
.c3 .ant-pro-table .ant-table-thead > tr:first-child > th[rowspan] {
  padding-bottom: 4px;
  border-bottom: 1px solid var(--acx-neutrals-30);
}

.c3 .ant-pro-table .ant-table-thead > tr > th {
  border-bottom: 0;
  padding: 0px var(--acx-table-cell-horizontal-space);
}

.c3 .ant-pro-table .ant-table-thead > tr > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before {
  width: 0px;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-title {
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter {
  --icon-size: 11px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up,
.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down {
  visibility: hidden;
  width: 0;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up.active,
.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down.active {
  visibility: visible;
  width: unset;
  margin-left: calc(var(--icon-size) / 2);
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up {
  margin-bottom: calc(var(--icon-size) / -2);
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down {
  margin-top: calc(var(--icon-size) / -2);
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter .anticon svg {
  fill: var(--acx-primary-black);
}

.c3 .ant-pro-table .ant-table-thead > tr > th[style*="text-align: center"] .ant-table-column-sorters {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .ant-pro-table .ant-table-thead > tr > th[style*="text-align: right"] .ant-table-column-sorters {
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td {
  border-bottom: 1px solid var(--acx-neutrals-30);
  padding: 14px var(--acx-table-cell-horizontal-space);
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c3 .ant-pro-table .ant-table-tbody > tr > td.ant-table-cell-row-hover {
  background-color: var(--acx-primary-white) !important;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td a {
  font-size: unset;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td .ant-badge.ant-badge-status:not(.acx-chart-tooltip) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td .ant-badge.ant-badge-status:not(.acx-chart-tooltip) .ant-badge-status-dot {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 .ant-pro-table .ant-table {
  background-color: transparent;
}

.c3 .ant-pro-table .ant-table-thead > tr:first-child > th,
.c3 .ant-pro-table .ant-table-thead > tr:last-child > th {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
  padding: 6px;
  border-bottom: 0px;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td:first-child {
  font-size: var(--acx-subtitle-5-font-size);
  line-height: var(--acx-subtitle-5-line-height);
  font-weight: var(--acx-subtitle-5-font-weight);
  padding: 0px;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td {
  font-size: var(--acx-subtitle-5-font-size);
  line-height: var(--acx-subtitle-5-line-height);
  padding: 6px;
  border-bottom: 0px;
}

.c0 {
  height: auto;
  width: 375px;
  padding: 10px 15px;
}

.c4 {
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  width: 100%;
  height: 22px;
}

.c5 {
  color: var(--acx-neutrals-60);
  display: inline;
}

.c1 {
  height: 35px;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid var(--acx-neutrals-30);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  font-weight: var(--acx-headline-4-font-weight-bold);
  color: var(--acx-accents-blue-50);
  padding: 10px 0px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        class="c2"
      >
        Aparna-Venue
      </a>
    </div>
    <div
      class="c3"
      style="--sticky-offset: 0px; --sticky-has-actions: 0; --sticky-has-row-actions-offset: 0;"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-pro-table-list-toolbar"
            />
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle ant-table-scroll-horizontal"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                        style="overflow-x: auto; overflow-y: hidden;"
                      >
                        <table
                          style="width: 100%; min-width: 100%; table-layout: auto;"
                        >
                          <colgroup>
                            <col
                              style="width: 75px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              />
                              <th
                                class="ant-table-cell"
                              >
                                Networking Devices
                              </th>
                              <th
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Clients
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              aria-hidden="true"
                              class="ant-table-measure-row"
                              style="height: 0px; font-size: 0px;"
                            >
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Wi-Fi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No APs
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No AP clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Switch
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switches
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switch clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="3"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                RUCKUS Edge
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No RUCKUS Edges
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              />
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Venue Marker Tooltip should render tooltip without padding 1`] = `
<DocumentFragment>
  .c3 .ant-pro-table {
  --acx-table-cell-horizontal-space: 8px;
}

.c3 .ant-pro-table .ant-pro-card .ant-pro-card-body {
  padding: 0px;
}

.c3 .ant-pro-table .ant-table .parent-row-data,
.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-row-hover,
.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-fix-right,
.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-fix-left,
.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-column-sort {
  background-color: var(--acx-neutrals-20) !important;
  overflow: visible !important;
}

.c3 .ant-pro-table .ant-table .parent-row-data .ant-table-cell-with-append .ant-table-row-expand-icon {
  display: none;
}

.c3 .ant-pro-table .ant-table .ant-table-cell-with-append .indent-level-2 {
  padding-left: 10px !important;
}

.c3 .ant-pro-table .ant-table-cell-fix-left {
  border-bottom: 1px solid var(--acx-neutrals-30) !important;
}

.c3 .ant-pro-table .ant-table-thead > tr:first-child > th {
  padding-top: 12px;
  font-size: var(--acx-subtitle-4-font-size);
  line-height: var(--acx-subtitle-4-line-height);
  font-weight: var(--acx-subtitle-4-font-weight);
}

.c3 .ant-pro-table .ant-table-thead > tr:not(:first-child) > th {
  padding-top: 6px;
  font-size: var(--acx-subtitle-5-font-size);
  line-height: var(--acx-subtitle-5-line-height);
  font-weight: var(--acx-subtitle-5-font-weight-semi-bold);
}

.c3 .ant-pro-table .ant-table-thead > tr:last-child > th,
.c3 .ant-pro-table .ant-table-thead > tr:first-child > th[rowspan] {
  padding-bottom: 4px;
  border-bottom: 1px solid var(--acx-neutrals-30);
}

.c3 .ant-pro-table .ant-table-thead > tr > th {
  border-bottom: 0;
  padding: 0px var(--acx-table-cell-horizontal-space);
}

.c3 .ant-pro-table .ant-table-thead > tr > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before {
  width: 0px;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-title {
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter {
  --icon-size: 11px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up,
.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down {
  visibility: hidden;
  width: 0;
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up.active,
.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down.active {
  visibility: visible;
  width: unset;
  margin-left: calc(var(--icon-size) / 2);
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-up {
  margin-bottom: calc(var(--icon-size) / -2);
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter-down {
  margin-top: calc(var(--icon-size) / -2);
}

.c3 .ant-pro-table .ant-table-thead > tr > th.ant-table-column-has-sorters .ant-table-column-sorters .ant-table-column-sorter .anticon svg {
  fill: var(--acx-primary-black);
}

.c3 .ant-pro-table .ant-table-thead > tr > th[style*="text-align: center"] .ant-table-column-sorters {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .ant-pro-table .ant-table-thead > tr > th[style*="text-align: right"] .ant-table-column-sorters {
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td {
  border-bottom: 1px solid var(--acx-neutrals-30);
  padding: 14px var(--acx-table-cell-horizontal-space);
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c3 .ant-pro-table .ant-table-tbody > tr > td.ant-table-cell-row-hover {
  background-color: var(--acx-primary-white) !important;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td a {
  font-size: unset;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td .ant-badge.ant-badge-status:not(.acx-chart-tooltip) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td .ant-badge.ant-badge-status:not(.acx-chart-tooltip) .ant-badge-status-dot {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 .ant-pro-table .ant-table {
  background-color: transparent;
}

.c3 .ant-pro-table .ant-table-thead > tr:first-child > th,
.c3 .ant-pro-table .ant-table-thead > tr:last-child > th {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
  padding: 6px;
  border-bottom: 0px;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td:first-child {
  font-size: var(--acx-subtitle-5-font-size);
  line-height: var(--acx-subtitle-5-line-height);
  font-weight: var(--acx-subtitle-5-font-weight);
  padding: 0px;
}

.c3 .ant-pro-table .ant-table-tbody > tr > td {
  font-size: var(--acx-subtitle-5-font-size);
  line-height: var(--acx-subtitle-5-line-height);
  padding: 6px;
  border-bottom: 0px;
}

.c0 {
  height: auto;
  width: 375px;
}

.c4 {
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  width: 100%;
  height: 22px;
}

.c5 {
  color: var(--acx-neutrals-60);
  display: inline;
}

.c1 {
  height: 35px;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid var(--acx-neutrals-30);
}

.c2 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  font-weight: var(--acx-headline-4-font-weight-bold);
  color: var(--acx-accents-blue-50);
  padding: 10px 0px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        class="c2"
      >
        Aparna-Venue
      </a>
    </div>
    <div
      class="c3"
      style="--sticky-offset: 0px; --sticky-has-actions: 0; --sticky-has-row-actions-offset: 0;"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-pro-table-list-toolbar"
            />
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle ant-table-scroll-horizontal"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                        style="overflow-x: auto; overflow-y: hidden;"
                      >
                        <table
                          style="width: 100%; min-width: 100%; table-layout: auto;"
                        >
                          <colgroup>
                            <col
                              style="width: 75px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              />
                              <th
                                class="ant-table-cell"
                              >
                                Networking Devices
                              </th>
                              <th
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Clients
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              aria-hidden="true"
                              class="ant-table-measure-row"
                              style="height: 0px; font-size: 0px;"
                            >
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Wi-Fi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No APs
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No AP clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Switch
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switches
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switch clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="3"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                RUCKUS Edge
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center c4 c5"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No RUCKUS Edges
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              />
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
